methods.returning.MethodsReturning.scala.code
var x=0 
var sawBaggle=False 
var y=0
def haveBaggle():Boolean = {
  while(!sawBaggle()){
    for(x<-0 to 6){
      forward();}
      if(isOverbaggle()){
        sawBaggle=True
      }
     for (y<- 0 to 6){
       backward();
     }
      right();
  		forward();
  		left();
  }
    return sawBaggle
}